# movieclipper

./: .gitignore  CLAUDE.md  README.md  clip_movie  movieclipper  pyproject.toml  test_clip_movie.py  test_movieclipper.py
.github/workflows/: lint.yml  prepare-release.yml  release.yml  tests.yml
docs/: ADVANCED.md  AUDIO.md  INSTALLATION.md  README.md  REFERENCE.md  TROUBLESHOOTING.md  USAGE.md
movieclipper/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
