[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project]
name = "movieclipper"
version = "0.1.0"
description = "CLI to cut video clips with ffmpeg, fuzzy title matching, and audio stream selection."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sebastien De Reviere" }]
dependencies = [
    "click>=8.0.0,<9.0",
    "rapidfuzz>=3.0.0,<4.0",
    "pydantic>=2.0.0,<3.0.0",
    "rich>=13.0.0,<14.0.0",
    "toml>=0.10.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "scriv[toml]>=1.5.0,<2.0",
]
ffmpeg = ["imageio-ffmpeg>=0.4.9,<0.5.0"]

[project.urls]
Documentation = "https://github.com/sderev/movieclipper"
Issues = "https://github.com/sderev/movieclipper/issues"
Changelog = "https://github.com/sderev/movieclipper/blob/main/CHANGELOG.md"

[project.scripts]
movieclipper = "movieclipper.cli:main"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
md_header_level = 2
output_file = "CHANGELOG.md"
fragment_directory = "changelog.d"
new_fragment_template = "file: changelog.d/templates/fragment.md.j2"
categories = [
    "Added",
    "Changed",
    "Deprecated",
    "Removed",
    "Fixed",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
